@@ -1,17 +1,17 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
- * <p>
+ * Copyright © 2014-2021 Ilkka Seppälä
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * <p>
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * <p>
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -20,69 +20,64 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.abstractdocument;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
 
-import static junit.framework.TestCase.assertEquals;
-import static junit.framework.TestCase.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * AbstractDocument test class
  */
-public class AbstractDocumentTest {
+class AbstractDocumentTest {
 
   private static final String KEY = "key";
   private static final String VALUE = "value";
 
-  private class DocumentImplementation extends AbstractDocument {
+  private static class DocumentImplementation extends AbstractDocument {
 
     DocumentImplementation(Map<String, Object> properties) {
       super(properties);
     }
   }
 
-  private DocumentImplementation document = new DocumentImplementation(new HashMap<>());
+  private final DocumentImplementation document = new DocumentImplementation(new HashMap<>());
 
   @Test
-  public void shouldPutAndGetValue() {
+  void shouldPutAndGetValue() {
     document.put(KEY, VALUE);
     assertEquals(VALUE, document.get(KEY));
   }
 
   @Test
-  public void shouldRetrieveChildren() {
-    Map<String, Object> child1 = new HashMap<>();
-    Map<String, Object> child2 = new HashMap<>();
-    List<Map<String, Object>> children = Arrays.asList(child1, child2);
+  void shouldRetrieveChildren() {
+    var children = List.of(Map.of(), Map.of());
 
     document.put(KEY, children);
 
-    Stream<DocumentImplementation> childrenStream = document.children(KEY, DocumentImplementation::new);
+    var childrenStream = document.children(KEY, DocumentImplementation::new);
     assertNotNull(children);
     assertEquals(2, childrenStream.count());
   }
 
   @Test
-  public void shouldRetrieveEmptyStreamForNonExistingChildren() {
-    Stream<DocumentImplementation> children = document.children(KEY, DocumentImplementation::new);
+  void shouldRetrieveEmptyStreamForNonExistingChildren() {
+    var children = document.children(KEY, DocumentImplementation::new);
     assertNotNull(children);
     assertEquals(0, children.count());
   }
 
   @Test
-  public void shouldIncludePropsInToString() {
-    Map<String, Object> props = new HashMap<>();
-    props.put(KEY, VALUE);
-    DocumentImplementation document = new DocumentImplementation(props);
-    assertNotNull(document.toString().contains(KEY));
-    assertNotNull(document.toString().contains(VALUE));
+  void shouldIncludePropsInToString() {
+    var props = Map.of(KEY, (Object) VALUE);
+    var document = new DocumentImplementation(props);
+    assertTrue(document.toString().contains(KEY));
+    assertTrue(document.toString().contains(VALUE));
   }
 
 }
