@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,16 +20,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.callback;
 
-import org.junit.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import static org.junit.Assert.assertEquals;
+import org.junit.jupiter.api.Test;
 
 /**
  * Add a field as a counter. Every time the callback method is called increment this field. Unit
  * test checks that the field is being incremented.
- *
+ * <p>
  * Could be done with mock objects as well where the call method call is verified.
  */
 public class CallbackTest {
@@ -37,43 +38,20 @@ public class CallbackTest {
   private Integer callingCount = 0;
 
   @Test
-  public void test() {
-    Callback callback = new Callback() {
-      @Override
-      public void call() {
-        callingCount++;
-      }
-    };
-
-    Task task = new SimpleTask();
-
-    assertEquals("Initial calling count of 0", new Integer(0), callingCount);
-
-    task.executeWith(callback);
-
-    assertEquals("Callback called once", new Integer(1), callingCount);
-
-    task.executeWith(callback);
-
-    assertEquals("Callback called twice", new Integer(2), callingCount);
-
-  }
-
-  @Test
-  public void testWithLambdasExample() {
+  void test() {
     Callback callback = () -> callingCount++;
 
-    Task task = new SimpleTask();
+    var task = new SimpleTask();
 
-    assertEquals("Initial calling count of 0", new Integer(0), callingCount);
-
-    task.executeWith(callback);
-
-    assertEquals("Callback called once", new Integer(1), callingCount);
+    assertEquals(Integer.valueOf(0), callingCount, "Initial calling count of 0");
 
     task.executeWith(callback);
 
-    assertEquals("Callback called twice", new Integer(2), callingCount);
+    assertEquals(Integer.valueOf(1), callingCount, "Callback called once");
+
+    task.executeWith(callback);
+
+    assertEquals(Integer.valueOf(2), callingCount, "Callback called twice");
 
   }
 }
