@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,15 +20,22 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.fluentinterface.fluentiterable;
 
-import org.junit.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
 import java.util.function.Consumer;
-
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import org.junit.jupiter.api.Test;
 
 /**
  * Date: 12/12/15 - 7:00 PM
@@ -46,28 +53,28 @@ public abstract class FluentIterableTest {
   protected abstract FluentIterable<Integer> createFluentIterable(final Iterable<Integer> integers);
 
   @Test
-  public void testFirst() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
-    final Optional<Integer> first = createFluentIterable(integers).first();
+  void testFirst() {
+    final var integers = List.of(1, 2, 3, 10, 9, 8);
+    final var first = createFluentIterable(integers).first();
     assertNotNull(first);
     assertTrue(first.isPresent());
     assertEquals(integers.get(0), first.get());
   }
 
   @Test
-  public void testFirstEmptyCollection() throws Exception {
-    final List<Integer> integers = Collections.<Integer>emptyList();
-    final Optional<Integer> first = createFluentIterable(integers).first();
+  void testFirstEmptyCollection() {
+    final var integers = Collections.<Integer>emptyList();
+    final var first = createFluentIterable(integers).first();
     assertNotNull(first);
     assertFalse(first.isPresent());
   }
 
   @Test
-  public void testFirstCount() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
-    final List<Integer> first4 = createFluentIterable(integers)
-            .first(4)
-            .asList();
+  void testFirstCount() {
+    final var integers = List.of(1, 2, 3, 10, 9, 8);
+    final var first4 = createFluentIterable(integers)
+        .first(4)
+        .asList();
 
     assertNotNull(first4);
     assertEquals(4, first4.size());
@@ -79,11 +86,11 @@ public abstract class FluentIterableTest {
   }
 
   @Test
-  public void testFirstCountLessItems() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
-    final List<Integer> first4 = createFluentIterable(integers)
-            .first(4)
-            .asList();
+  void testFirstCountLessItems() {
+    final var integers = List.of(1, 2, 3);
+    final var first4 = createFluentIterable(integers)
+        .first(4)
+        .asList();
 
     assertNotNull(first4);
     assertEquals(3, first4.size());
@@ -94,28 +101,28 @@ public abstract class FluentIterableTest {
   }
 
   @Test
-  public void testLast() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
-    final Optional<Integer> last = createFluentIterable(integers).last();
+  void testLast() {
+    final var integers = List.of(1, 2, 3, 10, 9, 8);
+    final var last = createFluentIterable(integers).last();
     assertNotNull(last);
     assertTrue(last.isPresent());
     assertEquals(integers.get(integers.size() - 1), last.get());
   }
 
   @Test
-  public void testLastEmptyCollection() throws Exception {
-    final List<Integer> integers = Collections.<Integer>emptyList();
-    final Optional<Integer> last = createFluentIterable(integers).last();
+  void testLastEmptyCollection() {
+    final var integers = Collections.<Integer>emptyList();
+    final var last = createFluentIterable(integers).last();
     assertNotNull(last);
     assertFalse(last.isPresent());
   }
 
   @Test
-  public void testLastCount() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
-    final List<Integer> last4 = createFluentIterable(integers)
-            .last(4)
-            .asList();
+  void testLastCount() {
+    final var integers = List.of(1, 2, 3, 10, 9, 8);
+    final var last4 = createFluentIterable(integers)
+        .last(4)
+        .asList();
 
     assertNotNull(last4);
     assertEquals(4, last4.size());
@@ -126,11 +133,11 @@ public abstract class FluentIterableTest {
   }
 
   @Test
-  public void testLastCountLessItems() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
-    final List<Integer> last4 = createFluentIterable(integers)
-            .last(4)
-            .asList();
+  void testLastCountLessItems() {
+    final var integers = List.of(1, 2, 3);
+    final var last4 = createFluentIterable(integers)
+        .last(4)
+        .asList();
 
     assertNotNull(last4);
     assertEquals(3, last4.size());
@@ -141,11 +148,11 @@ public abstract class FluentIterableTest {
   }
 
   @Test
-  public void testFilter() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3, 10, 9, 8);
-    final List<Integer> evenItems = createFluentIterable(integers)
-            .filter(i -> i % 2 == 0)
-            .asList();
+  void testFilter() {
+    final var integers = List.of(1, 2, 3, 10, 9, 8);
+    final var evenItems = createFluentIterable(integers)
+        .filter(i -> i % 2 == 0)
+        .asList();
 
     assertNotNull(evenItems);
     assertEquals(3, evenItems.size());
@@ -155,11 +162,11 @@ public abstract class FluentIterableTest {
   }
 
   @Test
-  public void testMap() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
-    final List<Long> longs = createFluentIterable(integers)
-            .map(Integer::longValue)
-            .asList();
+  void testMap() {
+    final var integers = List.of(1, 2, 3);
+    final var longs = createFluentIterable(integers)
+        .map(Integer::longValue)
+        .asList();
 
     assertNotNull(longs);
     assertEquals(integers.size(), longs.size());
@@ -169,23 +176,23 @@ public abstract class FluentIterableTest {
   }
 
   @Test
-  public void testForEach() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
+  void testForEach() {
+    final var integers = List.of(1, 2, 3);
 
     final Consumer<Integer> consumer = mock(Consumer.class);
     createFluentIterable(integers).forEach(consumer);
 
-    verify(consumer, times(1)).accept(Integer.valueOf(1));
-    verify(consumer, times(1)).accept(Integer.valueOf(2));
-    verify(consumer, times(1)).accept(Integer.valueOf(3));
+    verify(consumer, times(1)).accept(1);
+    verify(consumer, times(1)).accept(2);
+    verify(consumer, times(1)).accept(3);
     verifyNoMoreInteractions(consumer);
 
   }
 
   @Test
-  public void testSpliterator() throws Exception {
-    final List<Integer> integers = Arrays.asList(1, 2, 3);
-    final Spliterator<Integer> split = createFluentIterable(integers).spliterator();
+  void testSpliterator() throws Exception {
+    final var integers = List.of(1, 2, 3);
+    final var split = createFluentIterable(integers).spliterator();
     assertNotNull(split);
   }
 
