@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,69 +20,47 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.prototype;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertSame;
 
-import java.util.Arrays;
 import java.util.Collection;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertSame;
+import java.util.List;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 /**
  * Date: 12/28/15 - 8:45 PM
  *
+ * @param <P> Prototype
  * @author Jeroen Meulemeester
  */
-@RunWith(Parameterized.class)
-public class PrototypeTest<P extends Prototype> {
-
-  @Parameterized.Parameters
-  public static Collection<Object[]> data() {
-    return Arrays.asList(
-            new Object[]{new OrcBeast(), "Orcish wolf"},
-            new Object[]{new OrcMage(), "Orcish mage"},
-            new Object[]{new OrcWarlord(), "Orcish warlord"},
-            new Object[]{new ElfBeast(), "Elven eagle"},
-            new Object[]{new ElfMage(), "Elven mage"},
-            new Object[]{new ElfWarlord(), "Elven warlord"}
+class PrototypeTest<P extends Prototype> {
+  static Collection<Object[]> dataProvider() {
+    return List.of(
+        new Object[]{new OrcBeast("axe"), "Orcish wolf attacks with axe"},
+        new Object[]{new OrcMage("sword"), "Orcish mage attacks with sword"},
+        new Object[]{new OrcWarlord("laser"), "Orcish warlord attacks with laser"},
+        new Object[]{new ElfBeast("cooking"), "Elven eagle helps in cooking"},
+        new Object[]{new ElfMage("cleaning"), "Elven mage helps in cleaning"},
+        new Object[]{new ElfWarlord("protecting"), "Elven warlord helps in protecting"}
     );
   }
 
-  /**
-   * The tested prototype instance
-   */
-  private final Prototype testedPrototype;
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testPrototype(P testedPrototype, String expectedToString) {
+    assertEquals(expectedToString, testedPrototype.toString());
 
-  /**
-   * The expected {@link Prototype#toString()} value
-   */
-  private final String expectedToString;
-
-  /**
-   * Create a new test instance, using the given test object and expected value
-   *
-   * @param testedPrototype  The tested prototype instance
-   * @param expectedToString The expected {@link Prototype#toString()} value
-   */
-  public PrototypeTest(final Prototype testedPrototype, final String expectedToString) {
-    this.expectedToString = expectedToString;
-    this.testedPrototype = testedPrototype;
-  }
-
-  @Test
-  public void testPrototype() throws Exception {
-    assertEquals(this.expectedToString, this.testedPrototype.toString());
-
-    final Object clone = this.testedPrototype.clone();
+    final var clone = testedPrototype.copy();
     assertNotNull(clone);
-    assertNotSame(clone, this.testedPrototype);
-    assertSame(this.testedPrototype.getClass(), clone.getClass());
+    assertNotSame(clone, testedPrototype);
+    assertSame(testedPrototype.getClass(), clone.getClass());
+    assertEquals(clone, testedPrototype);
   }
 
 }
