@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,66 +20,58 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.repository;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-
-import java.util.Arrays;
-import java.util.List;
-
-import javax.annotation.Resource;
-
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.springframework.test.context.support.AnnotationConfigContextLoader;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.Lists;
+import java.util.List;
+import javax.annotation.Resource;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 /**
  * Test case to test the functions of {@link PersonRepository}, beside the CRUD functions, the query
  * by {@link org.springframework.data.jpa.domain.Specification} are also test.
- * 
  */
-@RunWith(SpringJUnit4ClassRunner.class)
-@ContextConfiguration(classes = { AppConfig.class }, loader = AnnotationConfigContextLoader.class)
-public class AnnotationBasedRepositoryTest {
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(classes = {AppConfig.class})
+class AnnotationBasedRepositoryTest {
 
   @Resource
   private PersonRepository repository;
 
-  Person peter = new Person("Peter", "Sagan", 17);
-  Person nasta = new Person("Nasta", "Kuzminova", 25);
-  Person john = new Person("John", "lawrence", 35);
-  Person terry = new Person("Terry", "Law", 36);
+  private final Person peter = new Person("Peter", "Sagan", 17);
+  private final Person nasta = new Person("Nasta", "Kuzminova", 25);
+  private final Person john = new Person("John", "lawrence", 35);
+  private final Person terry = new Person("Terry", "Law", 36);
 
-  List<Person> persons = Arrays.asList(peter, nasta, john, terry);
+  private final List<Person> persons = List.of(peter, nasta, john, terry);
 
   /**
    * Prepare data for test
    */
-  @Before
+  @BeforeEach
   public void setup() {
-
-    repository.save(persons);
+    repository.saveAll(persons);
   }
 
   @Test
-  public void testFindAll() {
-
-    List<Person> actuals = Lists.newArrayList(repository.findAll());
+  void testFindAll() {
+    var actuals = Lists.newArrayList(repository.findAll());
     assertTrue(actuals.containsAll(persons) && persons.containsAll(actuals));
   }
 
   @Test
-  public void testSave() {
-
-    Person terry = repository.findByName("Terry");
+  void testSave() {
+    var terry = repository.findByName("Terry");
     terry.setSurname("Lee");
     terry.setAge(47);
     repository.save(terry);
@@ -90,9 +82,8 @@ public class AnnotationBasedRepositoryTest {
   }
 
   @Test
-  public void testDelete() {
-
-    Person terry = repository.findByName("Terry");
+  void testDelete() {
+    var terry = repository.findByName("Terry");
     repository.delete(terry);
 
     assertEquals(3, repository.count());
@@ -100,32 +91,27 @@ public class AnnotationBasedRepositoryTest {
   }
 
   @Test
-  public void testCount() {
-
+  void testCount() {
     assertEquals(4, repository.count());
   }
 
   @Test
-  public void testFindAllByAgeBetweenSpec() {
-
-    List<Person> persons = repository.findAll(new PersonSpecifications.AgeBetweenSpec(20, 40));
+  void testFindAllByAgeBetweenSpec() {
+    var persons = repository.findAll(new PersonSpecifications.AgeBetweenSpec(20, 40));
 
     assertEquals(3, persons.size());
-    assertTrue(persons.stream().allMatch((item) -> {
-      return item.getAge() > 20 && item.getAge() < 40;
-    }));
+    assertTrue(persons.stream().allMatch((item) -> item.getAge() > 20 && item.getAge() < 40));
   }
 
   @Test
-  public void testFindOneByNameEqualSpec() {
-
-    Person actual = repository.findOne(new PersonSpecifications.NameEqualSpec("Terry"));
-    assertEquals(terry, actual);
+  void testFindOneByNameEqualSpec() {
+    var actual = repository.findOne(new PersonSpecifications.NameEqualSpec("Terry"));
+    assertTrue(actual.isPresent());
+    assertEquals(terry, actual.get());
   }
 
-  @After
+  @AfterEach
   public void cleanup() {
-
     repository.deleteAll();
   }
 
