@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,114 +20,87 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.specification.creature;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import com.iluwatar.specification.property.Color;
+import com.iluwatar.specification.property.Mass;
 import com.iluwatar.specification.property.Movement;
 import com.iluwatar.specification.property.Size;
-
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-
-import java.util.Arrays;
 import java.util.Collection;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import java.util.List;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 /**
  * Date: 12/29/15 - 7:47 PM
  *
  * @author Jeroen Meulemeester
  */
-@RunWith(Parameterized.class)
-public class CreatureTest {
+class CreatureTest {
 
   /**
    * @return The tested {@link Creature} instance and its expected specs
    */
-  @Parameterized.Parameters
-  public static Collection<Object[]> data() {
-    return Arrays.asList(
-            new Object[]{new Dragon(), "Dragon", Size.LARGE, Movement.FLYING, Color.RED},
-            new Object[]{new Goblin(), "Goblin", Size.SMALL, Movement.WALKING, Color.GREEN},
-            new Object[]{new KillerBee(), "KillerBee", Size.SMALL, Movement.FLYING, Color.LIGHT},
-            new Object[]{new Octopus(), "Octopus", Size.NORMAL, Movement.SWIMMING, Color.DARK},
-            new Object[]{new Shark(), "Shark", Size.NORMAL, Movement.SWIMMING, Color.LIGHT},
-            new Object[]{new Troll(), "Troll", Size.LARGE, Movement.WALKING, Color.DARK}
+  public static Collection<Object[]> dataProvider() {
+    return List.of(
+        new Object[]{new Dragon(), "Dragon", Size.LARGE, Movement.FLYING, Color.RED,
+            new Mass(39300.0)},
+        new Object[]{new Goblin(), "Goblin", Size.SMALL, Movement.WALKING, Color.GREEN,
+            new Mass(30.0)},
+        new Object[]{new KillerBee(), "KillerBee", Size.SMALL, Movement.FLYING, Color.LIGHT,
+            new Mass(6.7)},
+        new Object[]{new Octopus(), "Octopus", Size.NORMAL, Movement.SWIMMING, Color.DARK,
+            new Mass(12.0)},
+        new Object[]{new Shark(), "Shark", Size.NORMAL, Movement.SWIMMING, Color.LIGHT,
+            new Mass(500.0)},
+        new Object[]{new Troll(), "Troll", Size.LARGE, Movement.WALKING, Color.DARK,
+            new Mass(4000.0)}
     );
   }
 
-  /**
-   * The tested creature
-   */
-  private final Creature testedCreature;
-
-  /**
-   * The expected name of the tested creature
-   */
-  private final String name;
-
-  /**
-   * The expected size of the tested creature
-   */
-  private final Size size;
-
-  /**
-   * The expected movement type of the tested creature
-   */
-  private final Movement movement;
-
-  /**
-   * The expected color of the tested creature
-   */
-  private final Color color;
-
-  /**
-   * @param testedCreature The tested creature
-   * @param name           The expected name of the creature
-   * @param size           The expected size of the creature
-   * @param movement       The expected movement type of the creature
-   * @param color          The expected color of the creature
-   */
-  public CreatureTest(final Creature testedCreature, final String name, final Size size,
-                      final Movement movement, final Color color) {
-    this.testedCreature = testedCreature;
-    this.name = name;
-    this.size = size;
-    this.movement = movement;
-    this.color = color;
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testGetName(Creature testedCreature, String name) {
+    assertEquals(name, testedCreature.getName());
   }
 
-
-  @Test
-  public void testGetName() throws Exception {
-    assertEquals(this.name, this.testedCreature.getName());
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testGetSize(Creature testedCreature, String name, Size size) {
+    assertEquals(size, testedCreature.getSize());
   }
 
-  @Test
-  public void testGetSize() throws Exception {
-    assertEquals(this.size, this.testedCreature.getSize());
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testGetMovement(Creature testedCreature, String name, Size size, Movement movement) {
+    assertEquals(movement, testedCreature.getMovement());
   }
 
-  @Test
-  public void testGetMovement() throws Exception {
-    assertEquals(this.movement, this.testedCreature.getMovement());
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testGetColor(Creature testedCreature, String name, Size size, Movement movement,
+                    Color color) {
+    assertEquals(color, testedCreature.getColor());
   }
 
-  @Test
-  public void testGetColor() throws Exception {
-    assertEquals(this.color, this.testedCreature.getColor());
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testGetMass(Creature testedCreature, String name, Size size, Movement movement,
+                   Color color, Mass mass) {
+    assertEquals(mass, testedCreature.getMass());
   }
 
-  @Test
-  public void testToString() throws Exception {
-    final String toString = this.testedCreature.toString();
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  void testToString(Creature testedCreature, String name, Size size, Movement movement,
+                    Color color, Mass mass) {
+    final var toString = testedCreature.toString();
     assertNotNull(toString);
-    assertEquals(
-            String.format("%s [size=%s, movement=%s, color=%s]", name, size, movement, color),
-            toString
-    );
+    assertEquals(String
+        .format("%s [size=%s, movement=%s, color=%s, mass=%s]", name, size, movement, color, mass), toString);
   }
 }
